--- a/encriptador.css
+++ b/encriptador.css
@@ -5,18 +5,23 @@ body{
 }
 
 .logo{
-    width: 940px;
+
     padding-top: 20px;
     padding-bottom: 20px;
     margin: 10px 0 10px 0;
 }
 
 main{
-    width: 940px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
 
 }
+.bloque1{
+    width: 40%;
+}
+
 
 .pantalla1-botones{
     display: inline-block;
@@ -25,8 +30,6 @@ main{
     border-color: navy;
     box-sizing: border-box;
     background: rgba(243, 245, 252, 1);
-    position: relative;
-    right: 60px;
     box-shadow: inset 0 0 70px navy;
 
 }
@@ -38,6 +41,7 @@ main{
     font-size: 32px;
     font-family: ´Inter´;
     padding-left: 20px;
+    resize: none;
 }
 ::placeholder{ 
 
@@ -98,45 +102,52 @@ main{
     cursor: pointer;
 }
 
-
+.bloque2{
+    width: 40%;
+}
 .pantalla2-copiar{
-    display: inline-block;
+   
     border-style: double;
     border-color: navy;
     border-width: 11px;
     box-sizing: border-box;
-    background: rgba(243, 245, 252, 1);
+    box-shadow: inset 0 0 70px navy;
+    background: rgba(243, 245, 252, 1); 
+    display: inline-block;
     margin-left: 120px;
     padding-bottom: 30px;
-    box-shadow: inset 0 0 70px navy;
-    position: relative;
-    right: 140px;
+    text-align: center;
+    
     
 }
 .pantalla2{
-    outline: none;
+    
     border-style: none;
-    font-family: 'Inter' ;
-    font-size: 32px;
-    color: rgb(2,0,36);
-    padding-right: 13px;
-    padding-left: 20px;
     background: rgba(243, 245, 252, 1);
     background-image: url("imagen/Muñeco.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    color: rgb(2,0,36);
+    font-family: 'Inter' ;
+    font-size: 32px;
+    outline: none;
+    padding-right: 13px;
+    padding-left: 20px;
+    resize: none;
+    width: 88%;
 
         
 }
 
 
 .copiar{
-    width: 210px;
-    padding: 8px;
+    
     border-radius: 15px;
-    margin-top: 25px;
-    margin-left: 75px;
     border-width: 1px;
-    background: rgba(243, 245, 252, 1);
-
+    background: #f3f5fc;
+    margin-top: 25px;
+    padding: 8px;
+    width: 210px;
     
 }   
 .copiar p{
@@ -149,3 +160,104 @@ main{
     cursor: pointer;
  }   
 
+ @media only screen and (max-width: 760px){
+    main{
+        flex-direction: column;
+    }
+    .logo{
+        padding: 0;
+    }
+
+    .bloque1{
+        width: 100%;
+    }
+    
+    .pantalla1-botones{
+        display: flex;
+        flex-direction: column;
+    }
+    .pantalla1{
+        height: 200px;
+        padding-left: 0;
+        width: 98%;
+    }
+    .minusculas{
+        width: 82%;
+    }
+    .encriptar{
+        align-self: center;
+        width: 250px;
+        padding:20px ;
+        margin-left: 0;
+    }
+    .desencriptar{
+        align-self: center;
+        width:250px ;
+        padding: 20px;
+        margin-left: 0;
+    }
+    .bloque2{
+        
+        width: 100%;
+    }
+    .pantalla2-copiar{
+        display: flex;
+        flex-direction: column;
+        margin-left: 0;
+        align-items: center;
+    }
+
+ }
+ @media only screen and (min-width: 768px) and (max-width: 1024px){
+  
+    .pantalla1-botones{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    main{
+        flex-direction: column;
+    }
+    .logo{
+        padding: 0;
+    }
+
+    .bloque1{
+        width: 100%;
+    }
+   
+    .pantalla1-botones{
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .pantalla1{
+        height: 200px;
+        padding-left: 0;
+        width: 99%;
+    }
+    .minusculas{
+        width: 82%;
+    }
+    .encriptar{
+        align-self: center;
+        width: 250px;
+        padding:20px ;
+        margin-left: 100px;
+    }
+    .desencriptar{
+        align-self: center;
+        width:250px ;
+        padding: 20px;
+        margin-left: 50px;
+    }
+    .bloque2{
+        
+        width: 100%;
+    }
+    .pantalla2-copiar{
+        display: flex;
+        flex-direction: column;
+        margin-left: 0;
+        align-items: center;
+    }
+ }
